refactor: Improve test code quality and fix SonarQube issues
- Replace multiple individual tests with parameterized tests
- Chain multiple assertions into single assertion chains
- Remove code duplication in test methods